--- a/daily-reports.yml
+++ b/daily-reports.yml
@@ -16,7 +16,39 @@ variables:
   FAILURE_ADDRESS: 'dcd-devops-support@hmcts.net' # to be verified
 
 jobs:
-  - job:
+  - job: rd-daily
+    pool:
+      name: 'hmcts-ss-prod'
+    steps:
+      - task: AzureCLI@1
+        displayName: 'Get access token'
+        name: gettoken
+        inputs:
+          azureSubscription: $(serviceConnection)
+          scriptLocation: 'inlineScript'
+          inlineScript: |
+            #!/bin/bash
+            set -ex
+            output=`az account get-access-token --resource-type oss-rdbms --query accessToken -o tsv`
+            echo $output
+            echo "##vso[task.setvariable variable=PGPASSWORD]$output"
+      - task: AzureKeyVault@1
+        inputs:
+          azureSubscription: $(serviceConnection)
+          KeyVaultName: 'sendgridprod'
+          SecretsFilter: 'hmcts-db-reporting-api-key'
+          RunAsPreJob: false
+      - task: Bash@3
+        inputs:
+          filePath: '/scripts/daily/rd-location-ref-api-postgres-db-prod-dbrdlocationref-daily-locationrefdatarowcount.sh'
+        env:
+          SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
+      - task: Bash@3
+        inputs:
+          filePath: '/scripts/daily/rd-location-ref-api-postgres-db-prod-dbrdlocationref-daily-locationrefdatarowcount.sh'
+        env:
+          SENDGRID_APIKEY: $(hmcts-db-reporting-api-key)
+  - job: ccd-daily
     pool:
       name: 'hmcts-ss-prod'
     strategy:
